--- a/rest-mongo/src/main/resources/application.properties
+++ b/rest-mongo/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.database=protocolDB
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 server.port=8090
+elastic.base-url=http://localhost:8091
