--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=root
 
   elasticsearch:
-    image: elasticsearch:8.2.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
     restart: unless-stopped
     container_name: elasticsearch
     environment:
@@ -29,7 +29,7 @@ services:
       - elastic
 
   kibana:
-    image: kibana:8.2.2
+    image: docker.elastic.co/kibana/kibana:7.11.0
     ports:
       - target: 5601
         published: 5601
@@ -51,7 +51,7 @@ services:
     links:
       - mongodb
     environment:
-      - JAVA_OPTS=-Dspring.data.mongodb.host=mongodb
+      - JAVA_OPTS=-Dspring.data.mongodb.host=mongodb -Delastic.base-url=http://rest-elasticsearch:8091
     ports:
       - "8090:8090"
       - "5001:5001"
@@ -65,6 +65,8 @@ services:
       dockerfile: Dockerfile
     links:
       - elasticsearch
+    environment:
+      - JAVA_OPTS=-Delastic.hostname=localhost
     ports:
       - "8091:8091"
       - "5002:5002"
