--- a/rest-mongo/build.gradle
+++ b/rest-mongo/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.docker.restmongo.RestMongoApplication'
+        )
+    }
+}
+
 group = 'com.docker'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
