--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=root
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    image: elasticsearch:8.2.2
     restart: unless-stopped
     container_name: elasticsearch
     environment:
@@ -29,7 +29,7 @@ services:
       - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.11.0
+    image: kibana:8.2.2
     ports:
       - target: 5601
         published: 5601
